--- a/partials/template/program.htm
+++ b/partials/template/program.htm
@@ -15,6 +15,7 @@
                     <li class="active"><a href="#fday" aria-controls="fday" role="tab" data-toggle="tab">Standesamt</a></li>
                     <li><a href="#sday" aria-controls="sday" role="tab" data-toggle="tab">Winterstubb</a></li>
                     <li><a href="#tday" aria-controls="tday" role="tab" data-toggle="tab">Chateau Kafraya</a></li>
+                    <li><a href="#mday" aria-controls="mday" role="tab" data-toggle="tab">Übernachtung</a></li>
                 </ul>
                 <!-- tab panes -->
                 <div class="tab-content ">
@@ -53,9 +54,9 @@
                     <div role="tabpanel" class="tab-pane" id="sday">
                         <!-- program speaker here -->
                         <div class="col-md-6 col-sm-6">
-                                     <div class="embed-responsive embed-responsive-16by9">
-<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d640.058264001461!2d8.23810072928352!3d50.081923298714116!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47bdbdd8cba93289%3A0xa13b0ffb99e72a4f!2sWinterstubb!5e0!3m2!1sen!2sde!4v1502204274652" 
-frameborder="0" style="border:0" allowfullscreen></iframe>
+                            <div class="embed-responsive embed-responsive-16by9">
+                                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d640.058264001461!2d8.23810072928352!3d50.081923298714116!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47bdbdd8cba93289%3A0xa13b0ffb99e72a4f!2sWinterstubb!5e0!3m2!1sen!2sde!4v1502204274652"
+                                    frameborder="0" style="border:0" allowfullscreen></iframe>
                             </div>
                         </div>
                         <div class="col-md-6 col-sm-6">
@@ -68,7 +69,7 @@ frameborder="0" style="border:0" allowfullscreen></iframe>
                                 <i class="fa fa-glass" aria-hidden="true" style="float:left;display:block;margin-right:20px;margin-top:5px"></i>
                                 <p style="overflow:hidden;  ">Taunus Wunderland in the City<br />Mauritiusplatz Wiesbaden<br />Am Riesenrad</p>
                                 <div style="clear:both"></div>
-                                
+
                             </div>
                         </div>
                     </div>
@@ -95,6 +96,30 @@ frameborder="0" style="border:0" allowfullscreen></iframe>
                                 <div style="clear:both"></div>
 
                             </div>
+                        </div>
+                    </div>
+                    <div role="tabpanel" class="tab-pane active" id="mday">
+                        <!-- program speaker here -->
+                 
+                        <div class="col-md-6 col-sm-6">
+                            <div style="overflow:hidden">
+                                <i class="fa fa-bed" aria-hidden="true" title="Hotel" style="float:left;display:block;margin-right:20px"></i>
+
+                                <p style="overflow:hidden; margin-top:-5px">
+                                    
+                                    Wenn ihr im Anschluss an die Feier eine Übernachtungsmöglichkeit braucht,<br /> 
+                                    wendet euch bitte an unsere Trauzeugen oder direkt an uns. </p>
+
+
+                                <div style="clear:both"></div>
+
+                            </div>
+
+                          
+                        </div>
+                         <div class="col-md-6 col-sm-6">
+
+                            <p>Übernachtungstipps?!</p>
                         </div>
                     </div>
                 </div>
