--- a/partials/template/program.htm
+++ b/partials/template/program.htm
@@ -15,7 +15,7 @@
                     <li class="active"><a href="#fday" aria-controls="fday" role="tab" data-toggle="tab">Standesamt</a></li>
                     <li><a href="#sday" aria-controls="sday" role="tab" data-toggle="tab">Winterstubb</a></li>
                     <li><a href="#tday" aria-controls="tday" role="tab" data-toggle="tab">Chateau Kafraya</a></li>
-                    <li><a href="#mday" aria-controls="mday" role="tab" data-toggle="tab">Übernachtung</a></li>
+                    <li><a href="#ueber" aria-controls="ueber" role="tab" data-toggle="tab">Übernachtung</a></li>
                 </ul>
                 <!-- tab panes -->
                 <div class="tab-content ">
@@ -67,9 +67,11 @@
                             <h3>Anreise</h3>
                             <div class="overflow:hidden;">
                                 <i class="fa fa-glass" aria-hidden="true" style="float:left;display:block;margin-right:20px;margin-top:5px"></i>
-                                <p style="overflow:hidden;  ">Taunus Wunderland in the City<br />Mauritiusplatz Wiesbaden<br />Am Riesenrad</p>
+                                <p style="overflow:hidden; ">Taunus Wunderland in the City<br />Mauritiusplatz Wiesbaden<br />Am Riesenrad</p>
                                 <div style="clear:both"></div>
 
+                                <i class="fa fa-link" aria-hidden="true" style="float:left;display:block;margin-right:20px"></i>
+                                <p style="overflow:hidden; margin-top:-5px"><a href="http://winterstubb.de/" title="Winterstubb Website">Winterstubb</a></p>
                             </div>
                         </div>
                     </div>
@@ -95,29 +97,33 @@
                                 <p style="overflow:hidden; margin-top:-5px">Parkplätze in der Seitenstraße <br/> Wir rücken zusammen, so muss niemand Busfahren!</p>
                                 <div style="clear:both"></div>
 
+                                <i class="fa fa-link" aria-hidden="true" style="float:left;display:block;margin-right:20px"></i>
+                                <p style="overflow:hidden; margin-top:-5px"><a href="http://www.chateau-kefraya.de/" title="Chateau Kefraya Website">Chateau Kefraya</a></p>
+
+
+
                             </div>
                         </div>
                     </div>
-                    <div role="tabpanel" class="tab-pane active" id="mday">
-                        <!-- program speaker here -->
-                 
+                    <div role="tabpanel" class="tab-pane" id="ueber">
+
                         <div class="col-md-6 col-sm-6">
                             <div style="overflow:hidden">
                                 <i class="fa fa-bed" aria-hidden="true" title="Hotel" style="float:left;display:block;margin-right:20px"></i>
 
                                 <p style="overflow:hidden; margin-top:-5px">
-                                    
-                                    Wenn ihr im Anschluss an die Feier eine Übernachtungsmöglichkeit braucht,<br /> 
-                                    wendet euch bitte an unsere Trauzeugen oder direkt an uns. </p>
+
+                                    Wenn ihr im Anschluss an die Feier eine Übernachtungsmöglichkeit braucht,<br /> wendet
+                                    euch bitte an unsere Trauzeugen oder direkt an uns. </p>
 
 
                                 <div style="clear:both"></div>
 
                             </div>
 
-                          
+
                         </div>
-                         <div class="col-md-6 col-sm-6">
+                        <div class="col-md-6 col-sm-6">
 
                             <p>Übernachtungstipps?!</p>
                         </div>
