--- a/partials/template/locations.htm
+++ b/partials/template/locations.htm
@@ -1,30 +1,71 @@
-<section id="speakers" class="parallax-section">
+<section id="locations" class="parallax-section">
     <div class="container">
         <div class="row">
-             <div class="col-md-12 col-sm-12 wow bounceIn">
-                          <div class="owl-carousel owl-theme" id="owl-locations">
-    <img class="owl-lazy" data-src="https://placehold.it/350x250&text=1" data-src-retina="https://placehold.it/350x250&text=1-retina" alt="">
-    <img class="owl-lazy" data-src="https://placehold.it/350x250&text=2" data-src-retina="https://placehold.it/350x250&text=2-retina" alt="">
-    <img class="owl-lazy" data-src="https://placehold.it/350x250&text=3" alt="">
-    <img class="owl-lazy" data-src="https://placehold.it/350x250&text=4" alt="">
-    <img class="owl-lazy" data-src="https://placehold.it/350x250&text=5" alt="">
-    <img class="owl-lazy" data-src="https://placehold.it/350x250&text=6" alt="">
-    <img class="owl-lazy" data-src="https://placehold.it/350x250&text=7" alt="">
-    <img class="owl-lazy" data-src="https://placehold.it/350x250&text=8" alt="">
-    <img class="owl-lazy" data-src="https://placehold.it/350x250&text=9" alt="">
-    <img class="owl-lazy" data-src="https://placehold.it/350x250&text=10" alt="">
-  <div class="item wow fadeInUp col-md-3 col-sm-3" data-wow-delay="0.9s">
-                    <div class="speakers-wrapper">
-                        <img src="{{ 'assets/images/speakers-img1.jpg'|theme }}" class="img-responsive" alt="speakers">
+              <div class="wow fadeInUp col-md-12 col-sm-12" data-wow-delay="0.6s">
+                <div class="section-title">
+                    <h2>Locations</h2>
+                </div>
+            </div>
+            <div class="col-md-12 col-sm-12 wow bounceIn">
+                <div class="owl-carousel owl-theme" id="owl-locations">
+                    <div class="item wow fadeInUp col-md-3 col-sm-3" data-wow-delay="0.9s">
+                        <div class="speakers-wrapper">
+                            <img src="{{ 'assets/images/standesamt.jpg'|theme }}" class="img-responsive" alt="speakers">
                             <div class="speakers-thumb">
-                                <h3>Jenny Green</h3>
-                                <h6>UI Designer</h6>
+                                <h3>Standesamt Wiesbaden</h3>
                             </div>
+                        </div>
+                    </div>
+                    <div class="item wow fadeInUp col-md-3 col-sm-3" data-wow-delay="0.9s">
+                        <div class="speakers-wrapper">
+                            <img src="{{ 'assets/images/ws1.jpg'|theme }}" class="img-responsive" alt="speakers">
+                            <div class="speakers-thumb">
+                                <h3>Winterstubb</h3>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item wow fadeInUp col-md-3 col-sm-3" data-wow-delay="0.9s">
+                        <div class="speakers-wrapper">
+                            <img src="{{ 'assets/images/ws2.jpg'|theme }}" class="img-responsive" alt="speakers">
+                            <div class="speakers-thumb">
+                                <h3>Winterstubb</h3>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item wow fadeInUp col-md-3 col-sm-3" data-wow-delay="0.9s">
+                        <div class="speakers-wrapper">
+                            <img src="{{ 'assets/images/ws3.jpg'|theme }}" class="img-responsive" alt="speakers">
+                            <div class="speakers-thumb">
+                                <h3>Winterstubb</h3>
+                            </div>
+                        </div>
+                    </div>
+                     <div class="item wow fadeInUp col-md-3 col-sm-3" data-wow-delay="0.9s">
+                        <div class="speakers-wrapper">
+                            <img src="{{ 'assets/images/ck1.jpg'|theme }}" class="img-responsive" alt="speakers">
+                            <div class="speakers-thumb">
+                                <h3>Chateau Kafraya</h3>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item wow fadeInUp col-md-3 col-sm-3" data-wow-delay="0.9s">
+                        <div class="speakers-wrapper">
+                            <img src="{{ 'assets/images/ck2.jpg'|theme }}" class="img-responsive" alt="speakers">
+                            <div class="speakers-thumb">
+                                <h3>Chateau Kafraya</h3>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item wow fadeInUp col-md-3 col-sm-3" data-wow-delay="0.9s">
+                        <div class="speakers-wrapper">
+                            <img src="{{ 'assets/images/ck3.jpg'|theme }}" class="img-responsive" alt="speakers">
+                            <div class="speakers-thumb">
+                                <h3>Chateau Kafraya</h3>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
-            </div>
-
         </div>
     </div>
 </section>
