--- a/partials/template/navbar.htm
+++ b/partials/template/navbar.htm
@@ -7,19 +7,18 @@
                 <span class="icon icon-bar"></span>
                 <span class="icon icon-bar"></span>
             </button>
-            <a href="#" class="navbar-brand">{{ this.theme.settings_brand }}</a>
+            <a href="#" class="navbar-brand">Winterhochzeit 2017</a>
         </div>
 
         <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="#intro"    class="smoothScroll">Intro</a></li>
-                {% if this.theme.settings_overview  %}<li><a href="#gifts" class="smoothScroll">Geschenke</a></li>{% endif %}
-                {% if this.theme.settings_speakers  %}<li><a href="#speakers" class="smoothScroll">Speakers</a></li>{% endif %}
-                {% if this.theme.settings_program   %}<li><a href="#program"  class="smoothScroll">Programs</a></li>{% endif %}
-                {% if this.theme.settings_register  %}<li><a href="#register" class="smoothScroll">Register</a></li>{% endif %}
-                {% if this.theme.settings_venue     %}<li><a href="#dresscode"    class="smoothScroll">Dresscode</a></li>{% endif %}
-                {% if this.theme.settings_sponsors  %}<li><a href="#witnesses" class="smoothScroll">Trauzeugen</a></li>{% endif %}
-                {% if this.theme.settings_contact   %}<li><a href="#honeymoon"  class="smoothScroll">Flitterwochen</a></li>{% endif %}
+                <li><a href="#gallery"  class="smoothScroll">Gallery</a></li>
+                <li><a href="#program"  class="smoothScroll">Programm</a></li>
+                <li><a href="#locations" class="smoothScroll">Locations</a></li>
+                <li><a href="#dresscode"    class="smoothScroll">Dresscode</a></li>
+                <li><a href="#gifts" class="smoothScroll">Geschenke</a></li>
+                <li><a href="#honeymoon"  class="smoothScroll">Flitterwochen</a></li>
+                <li><a href="#witnesses" class="smoothScroll">Trauzeugen</a></li>
             </ul>
         </div>
 
